2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* exif.tcl (::exif::makerNote): Added missing logical operator to
	  if condition for field 34. Procheck report.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* exif.tcl:
	* exif.man:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the package to
	  to 1.1.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* exif.man:
	* exif.tcl: Applied patch for SF tcllib bug #665737 provided by
	  Tim J. Edwards <timje@users.sourceforge.net>. This not only
	  fixes the bug mentioned above, but also corrects some spelling
	  mistakes, adds support for a number of additional EXIF tags, and
	  provides functionality to dump a thumbnail image contained in
	  the data to a file.

	  The change in the interface of 'analyze' (stream -> file) was
	  reverted and an additional file based command provided
	  instead. This command is a wrapper around the stream interface.

	  Updated the documentation.

2003-02-06  David N. Welton  <davidw@dedasys.com>

	* exif.tcl (exif::makerNote): Use string match instead of regexp.

2002-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exif.tcl: Applied patch for bug report SF #530907 partially.

	  Parts of the patch are accepted and applied
	  * FlashPixVersion
	  * Construction of FlashMode

	  Not applied parts:
	  * SubjectDistance. Patch assumes that unit is millimeter and
	    converts to meter. Spec says that unit _is_ meter. (*). Is it
	    possible that the specific camera of the submitter implements
	    the standard incorrectly ?
